# as5600-rs

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.github/workflows/: rust.yml
proptest-regressions/: configuration_test.txt  status.txt  test.txt
proptest-regressions/configuration/: test.txt
proptest-regressions/register/: mod.txt
src/: as5600.rs  asynch.rs  configuration.rs  configuration_test.rs  constants.rs  error.rs  lib.rs  options.rs  states.rs  status.rs  test.rs  test_reading.rs  test_writing.rs
src/configuration/: conversion.rs  error.rs  mod.rs  test.rs
src/register/: error.rs  mod.rs
