[package]
name = "as5600"
version = "0.5.0"
edition = "2021"
description = "Platform-independent Rust driver for AS5600 digital magnetic potentiometer"
license = "MIT OR Apache-2.0"
repository = "https://github.com/barafael/as5600-rs"
documentation = "https://docs.rs/crate/as5600/latest"

[dev-dependencies]
embedded-hal-mock = "0.9.0"
linux-embedded-hal = "0.3.2"
proptest = "1.2.0"
proptest-derive = "0.3.0"

[dependencies]
embedded-hal = "0.2.7"
num-derive = "0.4.0"
num-traits = { version = "0.2.16", default-features = false }
