[package]
name = "as5600"
version = "0.7.0"
edition = "2021"
description = "Platform-independent Rust driver for AS5600 digital magnetic potentiometer"
license = "MIT OR Apache-2.0"
repository = "https://github.com/barafael/as5600-rs"
documentation = "https://docs.rs/crate/as5600/latest"

[dev-dependencies]
embedded-hal-mock = { version = "0.10", features = ["eh1"] }
linux-embedded-hal = "0.4"
proptest = "1"
proptest-derive = "0.4"

[dependencies]
embedded-hal = "1"
num-derive = "0.4"
num-traits = { version = "0.2", default-features = false }
