[package]
name = "as5600"
version = "0.8.0"
edition = "2021"
description = "Platform-independent Rust driver for AS5600 digital magnetic potentiometer"
license = "MIT OR Apache-2.0"
repository = "https://github.com/barafael/as5600-rs"
documentation = "https://docs.rs/crate/as5600/latest"

[features]
async = ["dep:embedded-hal-async"]
defmt = ["dep:defmt"]

[dev-dependencies]
embedded-hal-mock = { version = "0.10", features = ["eh1"] }
linux-embedded-hal = "0.4"
proptest = "1"
proptest-derive = "0.4"

[dependencies]
embedded-hal = "1"
embedded-hal-async = { version = "1", optional = true }
num-derive = "0.4"
num-traits = { version = "0.2", default-features = false }
defmt = { version = "0.3", optional = true }
